--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank">习近平谈中共领导人更替 接班人制再引关注</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>近期，习近平本人谈到中共“国家领导层”的更替问题，立即引发关注。因为中共接班人一直是外界关注的焦点，也是中共权斗的风向标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768112.md#1" target="_blank">担心国安风险 美五大军种全面禁用抖音</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1073256498-150x120.jpg" align ="left"></a>由于担心中国短影音平台抖音（TikTok）存在国家安全风险，美国五大军种全面禁用抖音。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank">美摄影教授被拒入境香港 曾拍摄抗议照片</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/130909110856100311-150x120.jpg" align ="left"></a>周四（1月2日），美国一所大学的摄影教授被拒绝入境香港。这名教授去年曾在香港报导抗议活动，且曾香港警察逮捕，但不久后被释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768022.md#1" target="_blank">港中联办主任遭撤换 新任骆惠宁有三大特点</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/190721150739100615-150x120.jpg" align ="left"></a>在反送中运动进行得如火如荼之际，香港中联办主任被撤换，刚刚退居二线的骆惠宁接替王志民，出任中联办主任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767967.md#1" target="_blank">中国学生被控罪 专家：给美学术机构敲警钟</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1502131348532483-150x120.jpg" align ="left"></a>中国癌症研究员郑凿松（Zaosong Zheng，音译）上月在波士顿被抓，并被指控企图将美国实验室研究材料走私回中国。专家表示，此案给所有美国大学和公司实验室敲响警钟，即联邦政府正在集中精力打击知识产权和商业机密盗窃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767902.md#1" target="_blank">香港中联办主任王志民被免职</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/180423090812100484-150x120.jpg" align ="left"></a>今天 （4日）傍晚，中共新华社发布“国务院任免国家工作人员”通稿，免除现任中联办主任王志民的职务，由中共人大财经委副主任委员骆惠宁接替。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767073.md#1" target="_blank">2019年前11个月 大陆车市产销量同比下降</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767073.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>大陆车市2019年持续下滑，去年11月，汽车市场累计产销量与2018年同期相比分别下降9%和9.1%。业内预测全年销量降幅在8%左右。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>从去年12月起，武汉爆发“不明原因的病毒性肺炎”，在此次疫情中，中共官方似如往次疫情爆发般，再度意图隐瞒，且被迫曝光后只公开部分消息。这导致了一些民众对于SARS再现的恐慌，而另一些民众却毫无防范概念。中共对疫情的隐瞒，究竟会带来哪些危机？如何才是正当的防疫之道？隐瞒疫情消息，给国民安全带来极大风险：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:30 PM							</td></tr>
@@ -18,11 +23,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766445.md#1" target="_blank">中共高速收费糗事：拦急救车  无高速路也得办卡</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1440px-ETC_Lane_in_China-150x120.jpg" align ="left"></a>大陆1月1日零时统一启用ETC（电子不停车收费系统），出现了诸多尴尬事，比如正在送伤者的救护车司机被强行下车缴费，一些地区没有高速公路却被分派指标，还有引发堵车和被质疑多扣费等，招来网民热议，指责当局在技术不完善时向民众强推ETC。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766574.md#1" target="_blank">除掉伊朗二号人物 川普：为了止战非宣战</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766574.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8b8c335e55462cdc01c34358b0da4a58-150x120.jpg" align ="left"></a>美东时间周五（1月3日）下午3点50分左右，美国总统川普（特朗普）首次针对美军在伊拉克机场击毙伊朗二号人物卡西姆?索莱马尼（Qassim Soleimani）公开发表声明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766426.md#1" target="_blank">习近平与林郑新年致辞有难言之隐？专家解读</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c9bc9efc2af3f02a3736f0494ff4c689@1200x1200-150x120.jpg" align ="left"></a>新年伊始，中港领导人都发表了新年致辞，引起各方解读。专家分析，习近平全文“报喜不报忧”，特点是“回避”；而香港特首林郑月娥，面对百万港人上街迎新年，更是回避，对港人的诉求就是不回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766425.md#1" target="_blank">新年前夕 信访局门上惊现山西退伍军人遗体</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766425.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506240515262120-150x120.jpg" align ="left"></a>中国（中共）的信访制度一直为人所诟病。周二（31日）山西一名退伍军人的遗体在省委信访局大门上被发现。他因为房屋等问题长期上访，却徒劳无功。至于他是否上吊自杀还有待调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766192.md#1" target="_blank">麦康奈尔：弹劾案轮到参院上场 会冷静判断</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-906260388-150x120.jpg" align ="left"></a>美国国会参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周五（1月3日）表示，众议院那边的弹劾程序已经结束，现在该轮到参议院作出冷静判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766347.md#1" target="_blank">《亚洲周刊》捧港警 作家董启章羞与为伍</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1911120304312188-600x400-150x120.jpg" align ="left"></a>《亚洲周刊》近日推崇备受港人唾弃、全球谴责的香港警队为2019年度风云人物。香港作家董启章在脸书发帖，批评该杂志已沦为宣传机器，并拒绝其作品《命子》入选同列该周刊的2019十大小说榜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank">凑成好字 40岁章子怡宣布新年二胎产子</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-150x120.jpg" align ="left"></a>此前在美国待产的大陆女星章子怡，1月3日在微博发文晒照，宣布二胎产子：“2020年1月1日，我们的生命中多了一个他，从此我们的世界又多了一份幸福的牵挂！这是上天赐予我们的最美新年礼物，感恩！新年真好！祝福大家新年快乐！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766060.md#1" target="_blank">【新闻看点】教唆港警使阴招？北京陷两难</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_12-55-03-150x120.jpg" align ="left"></a>越来越多的迹象表明，香港警察为了实施镇压，正在频频使用阴招，他们的行为无愧于“2019年度可耻人物”排名第二和“魔警”的称号。不过香港警察的所作所为，却在折射着北京当局的骑虎难下、左右为难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
 
 据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
